1999-05-31  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* COPYING: applied the license that scotty uses to all files.

1999-05-28  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* lib/Makefile.am: added automake and libtool support

1999-05-27  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* lib/smi.h: added SmiOption and SmiRefinement functions.

1999-05-25  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* README et al: applied GNU General Public License (NOT L-GPL).

	* tools/smiquery.c: adapted to current API.

	* lib/smi.h: added IndexNode and MemberNode functions.

1999-05-22  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* configure.in: LIBSMI_VERSION=0.1

	* Makefile: now building shared library. This heavily depends
	on the platform and bin-utils. Just tested for Solaris 2.5.1
	and Linux with GNU gcc and bin-utils.
	
	* configure.in: started GNU configure support.

	* ChangeLog: started ChangeLog.
